--- a/leaderboard.css
+++ b/leaderboard.css
@@ -798,7 +798,7 @@ select {
 }
 
 .Leaderboard p {
-  font-family: 'Oswald', sans-serif;
+  font-family: ' Sora, sans-serif';
   font-size: 4.5rem;
   margin: 15px 0;
   justify-content: center;
